fix for some strange layout bug in chromium

--- a/css/screen.css
+++ b/css/screen.css
@@ -87,7 +87,7 @@ ul.posts {
   }
   
   ul.posts li .second {
-    width: 40.5em;
+    width: 40.4em;
     display: inline-block;
   }
 
